# Prueba-imagine

./: .gitignore  README.md  docker-compose.yml  salesforce.md
.agents/harness-sdd/: craftsman_lead.md  gherkin_author.md  judge.md  mutation_tester.md  spec_partner.md  tdd_craftsman.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260628_0001_create_clients_and_tickets.py
backend/app/: __init__.py  main.py
backend/app/audit/: __init__.py  service.py
backend/app/controllers/: clients.py  tickets.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  client.py  ticket.py
backend/app/repositories/: clients.py  tickets.py
backend/app/schemas/: clients.py  tickets.py
backend/app/services/: clients.py  tickets.py
backend/tests/: conftest.py  test_clients.py  test_tickets.py
docs/harness-sdd/: README.md  decisions.md  feature-list.json  project-spec.md
docs/harness-sdd/progress/: audit-events.md  customer-management.md  docker-ci.md  frontend-client-ticket-ui.md  mutation-baseline.md  (+5 more)
features/: audit-events.feature  customer-management.feature  docker-ci.feature  frontend-client-ticket-ui.feature  salesforce-integration-doc.feature  ticket-management.feature
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css
(+3 files in other folders)
